--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,10 @@
     ],
     "require": {
         "symfony/templating": "^4.3"
+    },
+    "autoload": {
+        "psr4": {
+            "": "src/"
+        }
     }
 }
